crates/alder-parse/src/snapshots/alder_parse__style__tests__error_negative_dimension_bad_number.snap
---
source: crates/alder-parse/src/style.rs
description: "style { margin: -0x }"
---
Style(
    Dimension(
        HexDigit,
        1,
        20,
    ),
    1,
    1,
)
