crates/alder-parse/src/snapshots/alder_parse__style__tests__error_nested_missing_colon.snap
---
source: crates/alder-parse/src/style.rs
description: "style { \":hover\": { color red } }"
---
Style(
    Nested(
        Colon(
            1,
            27,
        ),
        1,
        19,
    ),
    1,
    1,
)
