crates/alder-parse/src/snapshots/alder_parse__style__tests__error_nested_unclosed.snap
---
source: crates/alder-parse/src/style.rs
description: "style { \":hover\": { color: red }"
---
Style(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 7,
            },
            boundary: Position {
                line: 1,
                column: 33,
            },
            unexpected: Position {
                line: 1,
                column: 33,
            },
        },
    ),
    1,
    1,
)
