crates/alder-parse/src/snapshots/alder_parse__style__tests__error_newline_non_key.snap
---
source: crates/alder-parse/src/style.rs
description: "style {\n    padding: 16px\n    (x)\n}\n"
---
Style(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 7,
            },
            boundary: Position {
                line: 2,
                column: 18,
            },
            unexpected: Position {
                line: 3,
                column: 5,
            },
        },
    ),
    1,
    1,
)
