crates/alder-parse/src/snapshots/alder_parse__style__tests__error_open.snap
---
source: crates/alder-parse/src/style.rs
description: style card
---
Style(
    Open(
        1,
        7,
    ),
    1,
    1,
)
