crates/alder-parse/src/snapshots/alder_parse__style__tests__error_open_eof.snap
---
source: crates/alder-parse/src/style.rs
description: style
---
Style(
    Open(
        1,
        6,
    ),
    1,
    1,
)
