crates/alder-parse/src/snapshots/alder_parse__style__tests__error_unclosed.snap
---
source: crates/alder-parse/src/style.rs
description: "style { padding: 16px"
---
Style(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 7,
            },
            boundary: Position {
                line: 1,
                column: 22,
            },
            unexpected: Position {
                line: 1,
                column: 22,
            },
        },
    ),
    1,
    1,
)
