crates/alder-parse/src/snapshots/alder_parse__style__tests__error_unclosed_empty.snap
---
source: crates/alder-parse/src/style.rs
description: "style {"
---
Style(
    Key(
        1,
        8,
    ),
    1,
    1,
)
