crates/alder-parse/src/snapshots/alder_parse__style__tests__error_unit_space.snap
---
source: crates/alder-parse/src/style.rs
description: "style { padding: 16 px }"
---
Style(
    Dimension(
        End,
        1,
        20,
    ),
    1,
    1,
)
