crates/alder-parse/src/snapshots/alder_parse__style__tests__error_value_reserved.snap
---
source: crates/alder-parse/src/style.rs
description: "style { padding: else }"
---
Style(
    Value(
        Reserved(
            Else,
            1,
            18,
        ),
        1,
        18,
    ),
    1,
    1,
)
