crates/alder-parse/src/snapshots/alder_parse__style__tests__style_bigint_is_expr.snap
---
source: crates/alder-parse/src/style.rs
description: "style { zIndex: 1n }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 21,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 15,
                            },
                        },
                        value: Ident(
                            "zIndex",
                        ),
                    },
                    value: Expr(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 17,
                                },
                                end: Position {
                                    line: 1,
                                    column: 19,
                                },
                            },
                            value: BigInt(
                                "1",
                            ),
                        },
                    ),
                },
            ],
        },
    ),
}
